Fix navigation link wrapping by applying white-space: nowrap

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -14,6 +14,7 @@
             font-size: 1.6rem
             padding: 12px 5px
             text-decoration: none
+            white-space: nowrap
 
 .nav
     position: absolute
@@ -40,7 +41,8 @@
             margin: 0
             border-radius: 4%
             transition: all .4s ease-in-out
-            width: 80px
+            width: auto
+            white-space: nowrap
 
             &:hover
                 color: $alpha
